--- a/src/components/notification/dropdown.scss
+++ b/src/components/notification/dropdown.scss
@@ -2,7 +2,7 @@
   z-index: 1;
   position: fixed;
   top: calc(92px + 4px);
-  right: calc(30px + 122px + 24px + 8px);
+  right: calc(40px + 122px + 24px + 8px);
 
   .dropdown {
     max-height: calc(91px * 3);
